--- a/backend/data/appointments.json
+++ b/backend/data/appointments.json
@@ -24,5 +24,31 @@
     "time": "22:50",
     "status": "rejected",
     "meetLink": ""
+  },
+  {
+    "id": "1757784863907",
+    "patientId": "patient_1757780673792_979",
+    "patientName": "Samrat Roy",
+    "patientEmail": "roys18746@gmail.com",
+    "doctorId": "doctor_1757783933840_4113",
+    "doctorName": "SAYAN DUTTA",
+    "doctorEmail": "samratroy721121@gmail.com",
+    "date": "2025-09-14",
+    "time": "16:00",
+    "status": "approved",
+    "meetLink": "https://meet.google.com/ugt-kxcj-hoq"
+  },
+  {
+    "id": "1757790976269",
+    "patientId": "patient_1757780673792_979",
+    "patientName": "Samrat Roy",
+    "patientEmail": "roys18746@gmail.com",
+    "doctorId": "doctor981130699",
+    "doctorName": "Sonal Kapoor",
+    "doctorEmail": "sonal.kapoor@example.com",
+    "date": "2025-09-15",
+    "time": "02:46",
+    "status": "pending",
+    "meetLink": ""
   }
 ]
